--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ h1 {
 
 label {
     font-weight: bold;
-    color: #42ac97;
+    color: #0b0f0e;
     margin-bottom: 0.2em;
     display: block;
     letter-spacing: 0.02em;
